--- a/JANAS.css
+++ b/JANAS.css
@@ -2,11 +2,145 @@
 
 /* --------------- ADD CSS RESET TO THE FILE HERE --------------- */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
 
 /* ----- AUTOPREFIXER FOR VS CODE WAS USED FOR VENDOR PREFIXES ----- */
 /* ---------- VARIABLES ---------- */
-:root{
+:root {
     --red: #760029;
     --pink: #9a0093;
     --orange: #ff8f6c;
@@ -22,7 +156,7 @@
 }
 
 /* ---------- GLOBAL STYLES ---------- */
-*{
+* {
     box-sizing: border-box;
     line-height: 1.35;
 }
@@ -31,31 +165,39 @@
 
 /* ----- CHECK FOR USER DARK MODE PREFERENCE ----- */
 /* --------------- BEGIN USER PREFERS DARK COLOR SCHEME QUERY --------------- */
+@media (prefers-color-scheme: dark) {
 
-/* CHANGE THE BODY'S BACKGROUND COLOR TO THE DARK GRAY IF THE USER PREFERS DARK MODE */
 
-/* --------------- END USER PREFERS DARK COLOR SCHEME QUERY --------------- */
+    /* CHANGE THE BODY'S BACKGROUND COLOR TO THE DARK GRAY IF THE USER PREFERS DARK MODE */
+    body {
+        background-color: var(--dark-gray);
+    }
 
+    /* --------------- END USER PREFERS DARK COLOR SCHEME QUERY --------------- */
+}
 
 
 /* ----- HEADINGS ----- */
-h1, h2, h3, h4{
+h1,
+h2,
+h3,
+h4 {
     font-weight: bold;
 }
 
-h1{
+h1 {
     font-size: 2em;
     margin: 0.5em 0;
     display: inline;
 }
 
-h2{
+h2 {
     font-size: 1.75em;
     display: inline;
 }
 
 /* ----- IMAGES ----- */
-img{
+img {
     display: block;
     max-width: 100%;
     margin: 0.5em 0;
@@ -63,46 +205,63 @@ img{
 
 /* ----- ANIMATED ICON ----- */
 /* Icon and animation code from https://typogram.github.io/Anicons/ */
-.icon{
+.icon {
     font-family: "Anicons Regular";
     font-size: 2em;
     display: inline-block;
     margin: 0 0.5em;
     -webkit-animation: icon-animation 1s ease-in-out infinite;
-            animation: icon-animation 1s ease-in-out infinite;
+    animation: icon-animation 1s ease-in-out infinite;
     overflow: visible;
 }
 
-footer .icon{
+footer .icon {
     font-size: 1em;
 }
 
 @-webkit-keyframes icon-animation {
-    0% { font-variation-settings: "TIME" 1; }
-  100% { font-variation-settings: "TIME" 100; }
+    0% {
+        font-variation-settings: "TIME" 1;
+    }
+
+    100% {
+        font-variation-settings: "TIME" 100;
+    }
 }
 
 @keyframes icon-animation {
-    0% { font-variation-settings: "TIME" 1; }
-  100% { font-variation-settings: "TIME" 100; }
+    0% {
+        font-variation-settings: "TIME" 1;
+    }
+
+    100% {
+        font-variation-settings: "TIME" 100;
+    }
 }
 
 
 
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
 /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
-    @-webkit-keyframes icon-animation {
-        0% { font-variation-settings: "TIME" 1; }
+@-webkit-keyframes icon-animation {
+    0% {
+        font-variation-settings: "TIME" 1;
     }
-    @keyframes icon-animation {
-        0% { font-variation-settings: "TIME" 1; }
+}
+
+@keyframes icon-animation {
+    0% {
+        font-variation-settings: "TIME" 1;
     }
+}
+
 /* --------------- END USER PREFERS REDUCED MOTION QUERY --------------- */
 
 
 
 /* ----- TEXT ----- */
-p, small{
+p,
+small {
     font-size: 1em;
     margin: 0.25em;
     padding: 0.25em;
@@ -110,38 +269,42 @@ p, small{
 }
 
 /* ----- MAIN/HEADER/FOOTER ----- */
-main, header, footer{
+main,
+header,
+footer {
     font-family: sans-serif;
     color: var(--dark-gray);
     width: 100%;
 }
 
-header, footer{
+header,
+footer {
     padding: 1em;
 }
 
-main{
+main {
     max-width: 1795px;
 }
 
 /* ----- CONTAINERS ----- */
-section{
+section {
     margin: 1em 0;
     padding: 1em;
 }
 
 /* ---------- EXTRA SMALL SCREEN STYLES ---------- */
-header, footer{
+header,
+footer {
     background-color: var(--pink);
     color: var(--white);
 }
 
-section{
+section {
     background-color: var(--red);
     color: var(--light-gray);
 }
 
-img{
+img {
     margin: 0.75em 0.75em 0.75em 0;
     display: inline;
     float: left;
@@ -150,7 +313,7 @@ img{
 
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-    /* header, footer{
+header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -175,14 +338,15 @@ img{
     img{
         width: 200px;
         max-width: 200px;
-    } */
+}
 /* --------------- END SMALL SCREEN SIZES --------------- */
 
 
 
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
-    /* header, footer{
+@media screen and (min-width: 620px){
+header, footer{
         background-color: var(--black);
         color: var(--white);
     }   
@@ -207,14 +371,15 @@ img{
     #seven{
         grid-column: 3/4;
         grid-row: 3/5;
-    } */
+    }}
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
 
 
 
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+@media screen and (min-width: 1380px){
+header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -245,24 +410,25 @@ img{
 
     #seven, #eight{
         grid-row: 3/4;
-    } */
+    }}
 /* --------------- END LARGE SCREEN SIZES --------------- */
 
 
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-    /* img{
-        width: 300px;
-        max-width: 300px;
-    } */
+img{
+        width: auto;
+        max-width: 500px;
+    }
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 
 
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+@media screen and (min-width: 1981px){
+header, footer{
         background-color: var(--orange);
         padding-left: 5%;
     }
@@ -327,5 +493,5 @@ img{
 
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
-    } */
+    }}
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
